# agentic-rag-edu-4th

./: .env  README.md  main.py  pyproject.toml  requirements.txt
data/: processed_chunks.pkl
db/: chroma.sqlite3
notebooks/: 01-data-ingestion-analysis.ipynb  02_Vector_Indexing.ipynb  03_Simple_RAG_Baseline.ipynb  04-AgenticBaseline.ipynb
